--- a/petstore-app/src/main/webapp/index.html
+++ b/petstore-app/src/main/webapp/index.html
@@ -1,9 +1,9 @@
-<HTML><HEAD><TITLE>JPetStore Demo</TITLE>
-<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
-</HEAD>
-
-<BODY bgColor=white>
-	Pet Store Egg
-</BODY>
-
-</HTML>
+<html>
+<head>
+<title>PetStore</title>
+<meta content="text/html; charset=utf-8" http-equiv=Content-Type>
+</head>
+<body bgColor=white>
+Pet Store Egg
+</body>
+</html>
