Use consistent naming in views context keys

--- a/webapp/src/main/webapp/app/pages/products.html
+++ b/webapp/src/main/webapp/app/pages/products.html
@@ -5,7 +5,7 @@
 <body>
 <div id="products">
   {{#match-found}}
-  <div id="match-found"><span id="match-count">{{matchCount}}</span> result(s)</div>
+  <div id="match-found"><span id="match-count">{{match-count}}</span> result(s)</div>
 
   <ul id="catalog">
     {{#products}}
