--- a/webapp/src/main/webapp/app/pages/items.html
+++ b/webapp/src/main/webapp/app/pages/items.html
@@ -4,7 +4,20 @@
 </head>
 <body>
 <div id="items">
+  {{#in-stock}}
+  <div id="in-stock"><span id="item-count">{{item-count}}</span> item(s) available for purchase</div>
+
+  <table id="inventory">
+    {{#items}}
+    <tr id="item-{{number}}">
+    </tr>
+    {{/items}}
+  </table>
+
+  {{/in-stock}}
+  {{^in-stock}}
   <span id="out-of-stock">No item left in inventory</span>
+  {{/in-stock}}
 </div>
 </body>
 </html>
