We can handle requests to display the content of the cart, but the cart is always empty.
--HG--
rename : webapp/src/main/webapp/app/pages/products.html => webapp/src/main/webapp/app/pages/cart.html

--- a/webapp/src/main/webapp/app/pages/items.html
+++ b/webapp/src/main/webapp/app/pages/items.html
@@ -20,7 +20,7 @@
       <td class="description">{{description}}</td>
       <td class="price">{{price}}</td>
       <td>
-        <form action="/cart_items" method="post">
+        <form action="/cart" method="post">
           <input type="hidden" name="item_number" value="{{number}}"/>
           <button class="add-to-cart" id="add-to-cart-{{number}}">Add to cart</button>
         </form>
