--- a/webapp/src/main/webapp/app/pages/cart.html
+++ b/webapp/src/main/webapp/app/pages/cart.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>PetStore - Shopping Cart</title>
+  <meta name="section" content="cart"/>
 </head>
 <body>
 <div id="cart">
