Don't repeat PetStore in every template title

--- a/webapp/src/main/webapp/app/pages/cart.html
+++ b/webapp/src/main/webapp/app/pages/cart.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>PetStore - Shopping Cart</title>
+  <title>Shopping Cart</title>
   <meta name="section" content="cart"/>
 </head>
 <body>
