We can handle order requests, but they never get processed by the sales assistant

--- a/webapp/src/main/webapp/app/pages/items.html
+++ b/webapp/src/main/webapp/app/pages/items.html
@@ -21,7 +21,7 @@
       <td class="price">{{price}}</td>
       <td>
         <form action="/cart" method="post">
-          <input type="hidden" name="item_number" value="{{number}}"/>
+          <input type="hidden" name="item-number" value="{{number}}"/>
           <button class="add-to-cart" id="add-to-cart-{{number}}">Add to cart</button>
         </form>
       </td>
