Let the SalesAssistant provide the order details, instead of exposing the cart

--- a/webapp/src/main/webapp/app/pages/cart.html
+++ b/webapp/src/main/webapp/app/pages/cart.html
@@ -27,7 +27,7 @@
       <td></td>
       <td></td>
       <td class="price">Grand total:</td>
-      <td class="total" id="cart-grand-total">{{grandTotal}}</td>
+      <td class="total" id="cart-grand-total">{{total}}</td>
       <td></td>
     </tr>
   </table>
