--- a/webapp/src/main/webapp/app/pages/checkout.html
+++ b/webapp/src/main/webapp/app/pages/checkout.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="purchase">
-  <span>Billing information - Cart total: <span id="cart-grand-total">{{cart.grandTotal}}</span></span>
+  <span>Billing information - Cart total: <span id="cart-grand-total">{{total}}</span></span>
 
   <form action="/checkout" method="post">
     <fieldset id="billing-address">
