We can handle requests to retrieve orders by number, but we don't display the receipt yet

--- a/webapp/src/main/webapp/app/pages/cart.html
+++ b/webapp/src/main/webapp/app/pages/cart.html
@@ -34,7 +34,7 @@
 
   <div id="cart-actions">
     <a id="continue-shopping" class="continue" href="/">&laquo; continue shopping</a>
-    <div id="checkout"><a href="/checkout">Checkout</a></div>
+    <div id="checkout"><a href="/orders/new">Checkout</a></div>
   </div>
 </div>
 </body>
