--- a/webapp/src/main/webapp/app/pages/checkout.html
+++ b/webapp/src/main/webapp/app/pages/checkout.html
@@ -7,7 +7,7 @@
 <div id="purchase">
   <span>Billing information - Cart total: <span id="cart-grand-total">{{total}}</span></span>
 
-  <form action="/checkout" method="post">
+  <form action="/orders" method="post">
     <fieldset id="billing-address">
     <ol>
       <li>
