Change mustache engine to JMustache

--- a/webapp/src/main/webapp/app/pages/products.html
+++ b/webapp/src/main/webapp/app/pages/products.html
@@ -11,7 +11,7 @@
     {{#products}}
     <li id="product-{{number}}">
       <a class="product-image" href="/products/{{number}}/items">
-        <img src="{{#photo}}{{photoFileName}}{{/photo}}"/>
+        <img src="{{#path}}{{photoFileName}}{{/path}}"/>
       </a>
 
       <div class="product-details">
