We can display validation errors in the order form, but no validation happens yet

--- a/webapp/src/main/webapp/app/pages/cart.html
+++ b/webapp/src/main/webapp/app/pages/cart.html
@@ -33,9 +33,9 @@
     </tr>
   </table>
 
-  <div id="cart-actions">
-    <a id="continue-shopping" class="continue" href="/">&laquo; continue shopping</a>
-    <div id="checkout"><a href="/orders/new">Checkout</a></div>
+  <div class="actions">
+    <a class="cancel" href="/">&laquo; continue shopping</a>
+    <div class="confirm"><a href="/orders/new">Checkout</a></div>
   </div>
   {{/cart}}
 </div>
