--- a/webapp/src/main/webapp/app/pages/items.html
+++ b/webapp/src/main/webapp/app/pages/items.html
@@ -29,8 +29,8 @@
     {{/items}}
   </table>
 
-  <div id="items-actions">
-    <a id="continue-shopping" class="continue" href="/">&laquo; continue shopping</a>
+  <div class="actions">
+    <a class="cancel" href="/">&laquo; continue shopping</a>
   </div>
 
   {{/in-stock}}
