--- a/webapp/src/main/webapp/app/pages/order.html
+++ b/webapp/src/main/webapp/app/pages/order.html
@@ -67,8 +67,8 @@
     </ul>
   </div>
 
-  <div id="receipt-actions">
-    <a id="continue-shopping" class="continue" href="/">&laquo; continue shopping</a>
+  <div class="actions">
+    <a class="cancel" href="/">&laquo; continue shopping</a>
   </div>
 </div>
 </body>
