--- a/webapp/src/main/webapp/app/pages/checkout.html
+++ b/webapp/src/main/webapp/app/pages/checkout.html
@@ -6,22 +6,23 @@
 <body>
 <div id="checkout">
   <span>Billing information - Cart total: <span id="cart-grand-total">{{total}}</span></span>
-
-  {{#errors}}order{{/errors}}
+{{#errors}}
+  payment
+{{/errors}}
   <form id="order" action="/orders" method="post">
     <fieldset id="billing-address">
     <ol>
       <li>
         <label for="first-name">First name:</label>
-        <input id="first-name" type="text" name="first-name" value="" size="33"/>
+        <input id="first-name" type="text" name="first-name" value="{{payment.firstName}}" size="33"/>
       </li>
       <li>
         <label for="last-name">Last name:</label>
-        <input id="last-name" type="text" name="last-name" value="" size="33"/>
+        <input id="last-name" type="text" name="last-name" value="{{payment.lastName}}" size="33"/>
       </li>
       <li>
         <label for="email">Email:</label>
-        <input id="email" type="text" name="email" value="" size="33"/>
+        <input id="email" type="text" name="email" value="{{payment.email}}" size="33"/>
       </li>
     </ol>
     </fieldset>
@@ -30,19 +31,21 @@
       <li>
         <label for="card-type">Card type:</label>
         <select id="card-type" name="card-type">
-          {{#cardTypes}}
-          <option value="{{key}}">{{value}}</option>
-          {{/cardTypes}}
+{{#cardTypes}}
+            <option value="{{type}}"{{{selected}}}>{{name}}</option>
+{{/cardTypes}}
         </select>
       </li>
       <li>
         <label for="card-number">Card number:</label>
-        <input id="card-number" type="text" name="card-number" value="" size="33"/>
-        {{#errors}}order.cardNumber{{/errors}}
+        <input id="card-number" type="text" name="card-number" value="{{payment.cardNumber}}" size="33"/>
+{{#errors}}
+        payment.cardNumber
+{{/errors}}
       </li>
       <li>
         <label for="expiry-date">Expiration date:</label>
-        <input id="expiry-date" type="text" name="expiry-date" value="" size="33"/>
+        <input id="expiry-date" type="text" name="expiry-date" value="{{payment.cardExpiryDate}}" size="33"/>
       </li>
     </ol>
     </fieldset>
