--- a/webapp/src/main/webapp/app/pages/order.html
+++ b/webapp/src/main/webapp/app/pages/order.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div id="receipt">
-  <p>Thank you, order number <span id="order-number">{{order.number}}</span> has been confirmed.</p>
+  <p>Thank you, order number <span id="order-number">{{number}}</span> has been confirmed.</p>
 
   <table id="order-details">
     <tr>
@@ -13,18 +13,18 @@
       <th>Price</th>
       <th>Total</th>
     </tr>
-{{#order.lineItems}}
+{{#lineItems}}
     <tr id="line-item-{{itemNumber}}">
       <td class="count">{{quantity}}</td>
       <td class="text">{{itemDescription}}</td>
       <td class="price">{{itemUnitPrice}}</td>
       <td class="total">{{totalPrice}}</td>
     </tr>
-{{/order.lineItems}}
+{{/lineItems}}
     <tr id="order-summary">
       <td colspan="2"></td>
       <td class="price">Grand total:</td>
-      <td id="order-total" class="total">{{order.totalPrice}}</td>
+      <td id="order-total" class="total">{{totalPrice}}</td>
     </tr>
   </table>
 
@@ -36,15 +36,15 @@
     <ul>
       <li id="first-name">
         <label>First name:</label>
-        <span>{{order.paymentMethod.firstName}}</span><br/>
+        <span>{{paymentMethod.firstName}}</span><br/>
       </li>
       <li id="last-name">
         <label>Last name:</label>
-        <span>{{order.paymentMethod.lastName}}</span><br/>
+        <span>{{paymentMethod.lastName}}</span><br/>
       </li>
       <li id="email">
         <label>Email address:</label>
-        <span>{{order.paymentMethod.email}}</span><br/>
+        <span>{{paymentMethod.email}}</span><br/>
       </li>
     </ul>
   </div>
@@ -54,15 +54,15 @@
     <ul>
       <li id="card-type">
         <label>Card type:</label>
-        <span>{{order.paymentMethod.cardCommonName}}</span><br/>
+        <span>{{paymentMethod.cardCommonName}}</span><br/>
       </li>
       <li id="card-number">
         <label>Card number:</label>
-        <span>{{order.paymentMethod.cardNumber}}</span><br/>
+        <span>{{paymentMethod.cardNumber}}</span><br/>
       </li>
       <li id="card-expiry">
         <label>Card expiry date:</label>
-        <span>{{order.paymentMethod.cardExpiryDate}}</span><br/>
+        <span>{{paymentMethod.cardExpiryDate}}</span><br/>
       </li>
     </ul>
   </div>
