It makes more sense that views have the same name as their respective template
--HG--
rename : webapp/src/main/java/org/testinfected/petstore/controllers/Checkout.java => webapp/src/main/java/org/testinfected/petstore/controllers/ProceedToCheckout.java
rename : webapp/src/main/java/org/testinfected/petstore/views/Bill.java => webapp/src/main/java/org/testinfected/petstore/views/Checkout.java
rename : webapp/src/main/java/org/testinfected/petstore/views/RenderedPage.java => webapp/src/main/java/org/testinfected/petstore/views/PlainPage.java
rename : webapp/src/main/java/org/testinfected/petstore/views/ProductsFound.java => webapp/src/main/java/org/testinfected/petstore/views/Products.java
rename : webapp/src/test/java/test/unit/org/testinfected/molecule/util/MimeTypeTest.java => webapp/src/test/java/test/unit/org/testinfected/molecule/util/MimeTypesTest.java
rename : webapp/src/test/java/test/unit/org/testinfected/petstore/controllers/CheckoutTest.java => webapp/src/test/java/test/unit/org/testinfected/petstore/controllers/ProceedToCheckoutTest.java
rename : webapp/src/test/resources/test/assets/image.png => webapp/src/test/resources/test/assets/images/image.png

--- a/webapp/src/main/webapp/app/pages/products.html
+++ b/webapp/src/main/webapp/app/pages/products.html
@@ -15,7 +15,7 @@
 {{#each}}
     <li id="product-{{number}}">
       <a class="product-image" href="/products/{{number}}/items">
-        <img src="{{#location}}{{photoFileName}}{{/location}}" alt="{{name}}"/>
+        <img src="{{#photoUrl}}{{photoFileName}}{{/photoUrl}}" alt="{{name}}"/>
       </a>
 
       <div class="product-details">
